# Glimmer

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarking/result/merfish/: merfish_combined_scores.csv
benchmarking/result/slideseq/: CAS.csv  CNMI.csv  MLAMI.csv  NASW.csv
benchmarking/result/xenium/: cluster_dissimilarity_KS_stats.csv  cluster_dissimilarity_table.csv  gene_purity_KS_stats.csv  gene_purity_table.csv
benchmarking/src/1_regional_clustering/: run_region_benchmarking.sh
benchmarking/src/1_regional_clustering/src/: cas.py  knn.py  metrics.py  mlami.py  nasw.py  run_metrics.py  run_region_Banksy.R  run_region_methods.py
benchmarking/src/2_subcellular_clustering/: run_xenium_baysor_segfree.sh  run_xenium_benchmarking_main.py  run_xenium_cellpose.py  run_xenium_ficture.sh
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/nbsphinx/tutorials/: 01_quickstart.ipynb
docs/_build/doctrees/tutorials/: 01_quickstart.doctree  index.doctree
docs/_build/html/: .buildinfo.bak  genindex.html  index.html  search.html  searchindex.js
docs/_build/html/tutorials/: 01_quickstart.html  index.html
docs/_sources/tutorials/: index.rst.txt
docs/tutorials/: 01_quickstart.html  index.html
figures/: fig3_benchmarking_slidetag.ipynb  fig3_slideseq_cerebellum.ipynb
glimmer/: __init__.py  model.py  segment.py  utils.py
notebook/: fig3_benchmarking_slidetag.ipynb  fig5_slidetag_tonsil.ipynb
