[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glimmer-st"
version = "0.1.0"
description = "A Unified Framework for Graph-Based Representation of Spatial Structures Across Modalities and Scales"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Qiyu Gong", email = "gongqiyu@broadinstitute.org" }
]
dependencies = [
    "numpy==2.2.6",
    "torch==2.7.0",             # NOTE: +cu126 is usually handled by pip/conda separately (e.g., torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126)
    "scipy==1.15.3",
    "tqdm==4.67.1",
    "scikit-learn==1.5.2",
    "scanpy==1.11.1",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "anndata==0.11.4",
    "zarr==2.18.3",
    "shapely==2.1.0",
    "alphashape==1.3.1",
    "joblib==1.5.1"
]
[project.urls]
Homepage = "https://github.com/thechenlab/Glimmer"